# rdgen

./: .README.md.kate-swp  .clang-format  .gitignore  .project_env  CMakeLists.txt  Makefile  README.md  ast.c  ast.h  dump.c  emit.c  emit.h  memory.c  memory.h  ptrlst.h  rdgen  rdgen.c  rdgen.h  test1.rdgen
docs/: doxygen.cfg  notes.md
old1/: ptrlst.c  ptrlst.h  rdgen.c  rdgen.old1.c  rdgen.py  rulelst.h  strlst.h
src/: CMakeLists.txt  ast.c  ast.h  dump.c  dump.h  emit.c  emit.h  emit_ast.c  emit_ast.h  emit_parser.c  emit_parser.h  errors.c  fileio.c  fileio.h  list.c  list.h  memory.c  parser.c  parser.h  preproc.c  preproc.h  process.c  process.h  ptrlst.h  rdgen.c  rdpgen.c  rdpgen.h  scanner.c  scanner.h  strs.c  strs.h  utils.c  utils.h
src/backup/: fileio.c  fileio.h
test/: calc  calc.c  calc.h  parser.rdpgen  parser.y  simple.peg  test1.rdgen
